tests/NormalTests/paczka1/small_fuzzy/89731487.err
Error in line 11: tvZVDLwoK S270 2,22
Error in line 9: R43Sm0n S270 25,8
